[gd_scene load_steps=4 format=3 uid="uid://cobe4w1kydfqx"]

[ext_resource type="Script" uid="uid://c7ln244qxgcr3" path="res://menus/pause_menu.gd" id="1_s0u37"]

[sub_resource type="InputEventKey" id="InputEventKey_s0u37"]
device = -1
physical_keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_p1qj3"]
events = [SubResource("InputEventKey_s0u37")]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s0u37")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -50.5
offset_right = 59.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_p1qj3")
text = "Resume"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ToTitleButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to Title"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ToTitleButton" to="." method="_on_to_title_button_pressed"]
